--- a/style.css
+++ b/style.css
@@ -1,1 +1,130 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Work Sans', sans-serif;
+  background-color: rgb(19, 18, 38);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  /* overflow: hidden; */
+}
+
+.movie-select {
+  display: flex;
+  margin-top: -50px;
+  align-items: center;
+  justify-content: center;
+}
+
+.movie-select p {
+  margin-right: 20px;
+  font-size: 20px;
+  font-weight: 600
+}
+
+.movie-select select {
+  border: none;
+  border-radius: 10px;
+  padding: 5px 12px;
+  background-color: rgb(7, 9, 42);
+  color: white;
+  outline: none;
+  border: none;
+  font-size: 18px;
+  letter-spacing: 1px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
+
+}
+
+.movie-select option {
+  border: none;
+  margin-top: 10px;
+}
+
+.status,
+.show {
+  display: flex;
+  align-items: center;
+  background-color: rgb(63, 62, 62);
+  padding: 10px;
+}
+
+.status {
+  margin: 30px 0;
+  border-radius: 10px;
+}
+
+.show li {
+  display: flex;
+  flex-direction: row;
+  margin-right: 30px;
+  list-style: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.show small {
+  margin-left: 5px;
+  color: rgb(225, 225, 225);
+}
+
+.container {
+  perspective: 1000px;
+}
+
+.screen {
+  background-color: white;
+  width: 100%;
+  height: 100px;
+  margin: 30px 0;
+  transform: rotateX(-45deg);
+  box-shadow: 0px 5px 10px 2px #c3bfbf;
+
+}
+
+.row {
+  display: flex;
+}
+
+.seat {
+  width: 18px;
+  height: 20px;
+  margin: 5px;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+  background-color: rgb(41, 40, 40);
+  display: flex;
+  cursor: pointer;
+}
+
+.seat:nth-of-type(2) {
+  margin-right: 30px;
+}
+
+.seat:nth-last-of-type(2) {
+  margin-left: 30px;
+}
+
+.selected {
+  background-color: aqua;
+}
+
+.booked {
+  background-color: rgb(237, 245, 245);
+}
+
+.status span {
+  color: aqua;
+}
